# tic_tac_toe_c

./: CMakeLists.txt  Makefile  main.cc
src/: state.hh  tic_tac_toe.cc  tic_tac_toe.hh
test/: ttt_test.cc
